Fix for images overflowing on layouts (#63)

--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -34,6 +34,7 @@
 }
 
 .n-content-layout__slot {
+	min-width: 0;
 	@include oTypographyMargin($top: 3, $bottom: 3);
 	@include oGridRespondTo(M) {
 		flex: 1;
